Añade funciones del menú, relaciones entre tablas, mejoras en la presentación de menús y en toString de Autor para fechas null.